--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "firebase": "~2.1.1",
+    "angularfire": "~0.9.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
